schemas: introduce assigned-clock-sscs
Spread Spectrum Clocking(SSC) is common to overcome EMI issues.
A spread spectrum clock is frequency modulated, so the energy is spread
out over a wider bandwidth, reducing the peak radiated emissions.
It includes three parameters to enable SSC:
- modulation frequency:typical values range is a few tens of KHz
- modulation depth: platform dependent, -0.5%~+0.5%, -2%~+2% or
  even 0.01% per stm32-rcc.yaml,
- modulation method: center, down, up spread.
To support spread spectrum clock, two options:
1. Put the spread spectrum settings in clock cells
2. Introduce assigned-clock-sscs

Option1 requires growing clock cells, but many clocks for the same clock
controller would not need or not even support spread-spectrum, but
clock-cells apply to entire clock controller device. using clock-cells might
lead to rather reduced readability of such DTS.
Option2 introduces a new property with each clock takes three u32. This
property only needs to be added under nodes that needs SSC.

This patch use Option2 which is a cleaner way from DTS view.

Signed-off-by: Peng Fan <peng.fan@nxp.com>

--- a/dtschema/schemas/clock/clock.yaml
+++ b/dtschema/schemas/clock/clock.yaml
@@ -131,6 +131,16 @@ properties:
     $ref: /schemas/types.yaml#/definitions/uint32-array
   assigned-clock-rates-u64:
     $ref: /schemas/types.yaml#/definitions/uint64-array
+  assigned-clock-sscs:
+    $ref: /schemas/types.yaml#/definitions/uint32-matrix
+    items:
+      items:
+        - description: The modulation frequency
+        - description: The modulation depth in permyriad
+        - description: The modulation method, down-spread(3), up-spread(2),
+            center-spread(1), no-spread(0)
+          minimum: 0
+          maximum: 3
 
   protected-clocks:
     $ref: /schemas/types.yaml#/definitions/uint32-array
@@ -150,6 +160,7 @@ dependentRequired:
   assigned-clock-parents: [assigned-clocks]
   assigned-clock-rates: [assigned-clocks]
   assigned-clock-rates-u64: [assigned-clocks]
+  assigned-clock-sscs: [assigned-clocks]
   protected-clocks: ["#clock-cells"]
 
 dependentSchemas:
