--- a/dtschema/meta-schemas/clocks.yaml
+++ b/dtschema/meta-schemas/clocks.yaml
@@ -23,6 +23,8 @@ properties:
     $ref: cell.yaml#/array
   assigned-clock-rates-u64:
     $ref: cell.yaml#/array
+  assigned-clock-sscs:
+    $ref: cell.yaml#/array
 
   clock-frequency:
     $ref: cell.yaml#/single
@@ -38,3 +40,4 @@ dependentRequired:
   assigned-clock-parents: [assigned-clocks]
   assigned-clock-rates: [assigned-clocks]
   assigned-clock-rates-u64: [assigned-clocks]
+  assigned-clock-sscs: [assigned-clocks]
